<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lightest_grey"
    tools:context=".ui.fragments.SetOneFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:elevation="4dp"
        app:subtitle="Step 3/5"
        app:subtitleTextColor="@color/colorLight"
        app:title="@string/app_name"
        app:titleTextColor="@color/colorPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/desc"
                android:text="Let's Start Academic Personalisation"
                android:layout_width="match_parent"
                android:fontFamily="@font/open_sans_bold"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_marginTop="28dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:ellipsize="end"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/desc2"
                android:text="Select the below fields to get a personalised dashboard for receiving semester and department related events, news, notifications and academic resources. Also find &amp; connect with your home-state buddies!"
                android:layout_width="match_parent"
                android:fontFamily="@font/muli_extralight"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/eight_dp"
                android:textSize="12sp"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginEnd="@dimen/fab_margin"
                android:layout_height="wrap_content"/>
            <View
                android:id="@+id/view"
                android:background="@color/grey_bold"
                android:layout_width="25dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/eight_dp"
                android:layout_height="1dp"/>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15.0dip"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginEnd="15.0dip"
                android:layout_marginBottom="@dimen/eight_dp"
                android:hint="@string/homestate">

                <AutoCompleteTextView
                    android:id="@+id/homestate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:padding="12dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15.0dip"
                android:layout_marginEnd="15.0dip"
                android:layout_marginBottom="@dimen/eight_dp"
                android:hint="@string/department">

                <AutoCompleteTextView
                    android:id="@+id/department"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:padding="12dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15.0dip"
                android:layout_marginEnd="15.0dip"
                android:layout_marginBottom="@dimen/eight_dp"
                android:hint="@string/semester">

                <AutoCompleteTextView
                    android:id="@+id/semester"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:padding="12dp" />
            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/nextBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/fab_margin"
                android:text="@string/next" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>